add project arhitecture, add custom fonts, basic setup without any third-party modules

--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "android": "npx react-native run-android",
+    "ios": "npx react-native run-ios",
+    "start": "npx react-native start",
+    "reset-cache-start": "yarn start --reset-cache",
+    "remove-metro-cache": "rm -rf /tmp/metro-*",
+    "clear-release-android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && rm -rf ./android/app/src/main/res/drawable-* && rm -rf ./android/app/src/main/res/raw && rm -rf ./android/app/build && rm -rf ~/.gradle/caches/",
+    "run-dev-mode-android": "adb shell input keyevent 82",
+    "clear-project-cache": "npx react-native-clean-project",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
@@ -21,6 +26,7 @@
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^25.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
