--- a/ios/RohTVApp/Info.plist
+++ b/ios/RohTVApp/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,19 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GothamSSm-Black.otf</string>
+		<string>GothamSSm-BlackItalic.otf</string>
+		<string>GothamSSm-Bold.otf</string>
+		<string>GothamSSm-BoldItalic.otf</string>
+		<string>GothamSSm-Book.otf</string>
+		<string>GothamSSm-BookItalic.otf</string>
+		<string>GothamSSm-Light.otf</string>
+		<string>GothamSSm-LightItalic.otf</string>
+		<string>GothamSSm-Medium.otf</string>
+		<string>GothamSSm-MediumItalic.otf</string>
+		<string>GothamSSm-XLightItalic.otf</string>
+	</array>
 </dict>
 </plist>
