--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
   package="com.rohtvapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -10,8 +10,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:banner="@drawable/tv_banner"
-
       android:screenOrientation="portrait"
+      android:usesCleartextTraffic="true" 
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
