--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,17 @@ buildscript {
         minSdkVersion = 22//16
         compileSdkVersion = 28//29
         targetSdkVersion = 28//29
+        //need check
+        //Option 1 (latest):
+        firebaseIidVersion = "19.0.1" // default: "19.0.1"
+        //Option 2 (legacy GooglePlay dependency but using AndroidX):
+        googlePlayServicesIidVersion = "17.0.0" // default: "17.0.0" - AndroidX
+        //Option 3 (legacy GooglePlay dependency before AndroidX):
+        googlePlayServicesIidVersion = "16.0.1"
+
+        supportLibVersion = '28.0.0' // Use '28.0.0' or don't specify for old libraries, '1.0.2' or similar for AndroidX
+        mediaCompatVersion = '1.0.1' // Do not specify if using old libraries, specify '1.0.1' or similar for androidx.media:media dependency
+        supportV4Version = '1.0.0' // Do not specify if using old libraries, specify '1.0.0' or similar for androidx.legacy:legacy-support-v4 dependency
     }
     repositories {
         google()
