--- a/package.json
+++ b/package.json
@@ -15,8 +15,25 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.1",
+    "prismic-reactjs": "^1.3.4",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-device-info": "^8.1.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-qrcode-svg": "^6.1.1",
+    "react-native-reanimated": "^1.13.3",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -24,12 +41,16 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "babel-jest": "^25.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
