--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.rohtvapp">
+  package="com.rohtvapp" xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
@@ -11,8 +11,13 @@
       android:allowBackup="false"
       android:banner="@drawable/tv_banner"
       android:screenOrientation="portrait"
-      android:usesCleartextTraffic="true" 
-      android:theme="@style/AppTheme">
+      android:usesCleartextTraffic="true"
+      android:networkSecurityConfig="@xml/network_security_config"
+      android:theme="@style/AppTheme"
+      tools:targetApi="28">
+      <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
