--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.1",
+    "@sentry/react-native": "^2.6.1",
     "axios": "^0.21.1",
     "prismic-reactjs": "^1.3.4",
     "react": "16.13.1",
