--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.1",
     "@sentry/react-native": "^2.6.1",
+    "@types/promise.allsettled": "^1.0.3",
     "axios": "^0.21.1",
+    "fuse.js": "^6.4.6",
+    "lodash.get": "^4.4.2",
     "prismic-reactjs": "^1.3.4",
+    "promise.allsettled": "^1.0.4",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-device-info": "^8.1.3",
+    "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^1.13.3",
@@ -41,6 +47,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash.get": "^4.4.6",
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^16.9.2",
