--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,5 +44,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven { url 'http://bitmovin.bintray.com/maven' }
     }
 }
