--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sentry/react-native": "^2.6.1",
     "@types/promise.allsettled": "^1.0.3",
     "axios": "^0.21.1",
+    "flagged": "^2.0.1",
     "fuse.js": "^6.4.6",
     "lodash.get": "^4.4.2",
     "prismic-reactjs": "^1.3.4",
