--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.21.1",
     "flagged": "^2.0.1",
     "fuse.js": "^6.4.6",
+    "html-entities": "^2.3.2",
     "lodash.get": "^4.4.2",
     "prismic-reactjs": "^1.3.4",
     "promise.allsettled": "^1.0.4",
