--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
+    "react-navigation-backhandler": "^2.0.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3"
