--- a/ios/RohTVApp-tvOS/Info.plist
+++ b/ios/RohTVApp-tvOS/Info.plist
@@ -35,6 +35,20 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GothamSSm-Black.otf</string>
+		<string>GothamSSm-BlackItalic.otf</string>
+		<string>GothamSSm-Bold.otf</string>
+		<string>GothamSSm-BoldItalic.otf</string>
+		<string>GothamSSm-Book.otf</string>
+		<string>GothamSSm-BookItalic.otf</string>
+		<string>GothamSSm-Light.otf</string>
+		<string>GothamSSm-LightItalic.otf</string>
+		<string>GothamSSm-Medium.otf</string>
+		<string>GothamSSm-MediumItalic.otf</string>
+		<string>GothamSSm-XLightItalic.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
