--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "ios": "npx react-native run-ios",
     "start": "npx react-native start",
     "reset-cache-start": "yarn start --reset-cache",
-    "remove-metro-cache": "rm -rf /tmp/metro-*",
     "clear-release-android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && rm -rf ./android/app/src/main/res/drawable-* && rm -rf ./android/app/src/main/res/raw && rm -rf ./android/app/build && rm -rf ~/.gradle/caches/",
     "run-dev-mode-android": "adb shell input keyevent 82",
     "clear-project-cache": "npx react-native-clean-project",
@@ -32,6 +31,7 @@
     "promise.allsettled": "^1.0.4",
     "react": "16.13.1",
     "react-native": "npm:react-native-tvos@0.63.4-0",
+    "react-native-bootsplash": "^3.2.6",
     "react-native-device-info": "^8.1.3",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "^1.10.3",
