--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prismic-reactjs": "^1.3.4",
     "promise.allsettled": "^1.0.4",
     "react": "16.13.1",
-    "react-native": "npm:react-native-tvos@0.63.4",
+    "react-native": "npm:react-native-tvos@0.63.4-0",
     "react-native-device-info": "^8.1.3",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "^1.10.3",
