#58  added Sentry supporting for Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,7 @@ dependencies {
 
     implementation 'com.bitmovin.player:player:3.4.0'
     implementation 'com.bitmovin.analytics:collector-bitmovin-player:2.0.0'
+    implementation 'io.sentry:sentry-android:5.3.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
