--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
 
       <meta-data android:name="BITMOVIN_PLAYER_LICENSE_KEY" android:value="1cb2ef33-6d56-4632-8d8b-1fdbf64b3511" />
       <meta-data android:name="BITMOVIN_ANALYTICS_LICENSE_KEY" android:value="45a0bac7-b900-4a0f-9d87-41a120744160" />
+      <meta-data android:name="io.sentry.dsn" android:value="https://1a830de5cb974a1dbd0ed139dd5e6d7d@o936063.ingest.sentry.io/5886190" />
     </application>
 
 </manifest>
