--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.3")
