--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 # This is a fairly static and thus safe master branch. (In the unlikely event that that changes, fork ;) )
 source 'https://github.com/react-native-tvos/react-native-tvos-podspecs.git'
+source 'https://github.com/bitmovin/cocoapod-specs.git'
 source 'https://cdn.cocoapods.org/'
 
 target 'RohTVApp' do
@@ -36,6 +37,10 @@ target 'RohTVApp-tvOS' do
   # Hermes not yet available on tvOS
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'BitmovinPlayer', '3.9.0'
+  pod 'BitmovinAnalyticsCollector/Core', '2.4.0'
+  pod 'BitmovinAnalyticsCollector/BitmovinPlayer', '2.4.0'
+  
   target 'RohTVApp-tvOSTests' do
     inherit! :complete
     # Pods for testing
