--- a/ios/RohTVApp/Info.plist
+++ b/ios/RohTVApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>BitmovinPlayerLicenseKey</key>
+  <string>1cb2ef33-6d56-4632-8d8b-1fdbf64b3511</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -38,7 +40,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,7 +55,6 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <!-- This is the key for the ROH fonts to be embedded in an iOS/tvOS app. -->
 	<key>UIAppFonts</key>
 	<array>
 		<string>GothamSSm-Black.otf</string>
