--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sentry/react-native": "^2.6.1",
     "@types/promise.allsettled": "^1.0.3",
     "axios": "^0.21.1",
+    "base-64": "^1.0.0",
     "coa": "2.0.2",
     "flagged": "^2.0.1",
     "fuse.js": "^6.4.6",
@@ -50,6 +51,7 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/base-64": "^1.0.0",
     "@types/jest": "^25.2.3",
     "@types/lodash.get": "^4.4.6",
     "@types/react-native": "^0.63.2",
