--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prismicio/client": "^5.1.0",
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/cli-platform-android": "^6.3.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
