--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "flagged": "^2.0.1",
     "fuse.js": "^6.4.6",
     "html-entities": "^2.3.2",
+    "lodash.difference": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "moment": "^2.29.1",
     "prismic-reactjs": "^1.3.4",
     "promise.allsettled": "^1.0.4",
     "react": "16.13.1",
@@ -54,7 +57,9 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/base-64": "^1.0.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash.difference": "^4.5.6",
     "@types/lodash.get": "^4.4.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^16.9.2",
