--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.7.0",
+    "react-native-spinkit": "^1.5.1",
     "react-native-svg": "^12.2.0",
     "react-navigation-backhandler": "^2.0.1",
     "react-redux": "^7.2.4",
