--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "16.13.1",
     "react-native": "npm:react-native-tvos@0.63.4-0",
     "react-native-bootsplash": "^3.2.6",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-device-info": "^8.1.3",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "^1.10.3",
@@ -62,6 +63,7 @@
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-countdown-component": "^2.7.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux": "^3.6.0",
