--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "flagged": "^2.0.1",
     "fuse.js": "^6.4.6",
     "html-entities": "^2.3.2",
+    "lodash.debounce": "^4.0.8",
     "lodash.difference": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
@@ -59,6 +60,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/base-64": "^1.0.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.difference": "^4.5.6",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.isequal": "^4.5.5",
